RESOLVED FIXED42281
-webkit-transition Fails on Multiple text-shadow Shadows
https://bugs.webkit.org/show_bug.cgi?id=42281
Summary -webkit-transition Fails on Multiple text-shadow Shadows
DeathByNukes
Reported 2010-07-14 13:16:12 PDT
Created attachment 61554 [details] Demonstration When using -webkit-transition on a text-shadow containing 3 or more shadows, only the first and last shadows will be visible during the transition; all other shadows disappear until it is over. If I interrupt and resume the transition, the first shadow will jump to the destination's color and reset to position 0,0 with 0 blur then transition from there to the destination. I have tested this in "AppleWebKit/533.9 Chrome/6.0.401.1" and "AppleWebKit/533.16 Version/5.0 Safari/533.16" in Windows 7 x64.
Attachments
Demonstration (1.62 KB, text/html)
2010-07-14 13:16 PDT, DeathByNukes
no flags
Patch (5.50 KB, patch)
2010-12-06 14:26 PST, Simon Fraser (smfr)
no flags
Patch (5.48 KB, patch)
2010-12-06 17:02 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-12-06 10:46:38 PST
Confirming.
Simon Fraser (smfr)
Comment 2 2010-12-06 14:26:02 PST
mitz
Comment 3 2010-12-06 14:40:37 PST
Comment on attachment 75736 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=75736&action=review > WebCore/page/animation/AnimationBase.cpp:372 > + newShadowData = lastShadow = blendedShadow; > + else { > + lastShadow->setNext(blendedShadow); > + lastShadow = blendedShadow; > + } I think a better way to write this, which also avoids the forbidden double assignment, would be: if (!newShadowData) newShadowData = blendedShadow; else lastShadow->setNext(blendedShadow); lastShadow = blendedShadow;
Simon Fraser (smfr)
Comment 4 2010-12-06 17:02:08 PST
WebKit Review Bot
Comment 5 2010-12-06 17:04:27 PST
Attachment 75755 [details] did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'HEAD']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'HEAD'. If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 6 2010-12-07 14:03:44 PST
Simon Fraser (smfr)
Comment 7 2010-12-11 19:33:44 PST
*** Bug 39703 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 8 2010-12-11 19:35:21 PST
*** Bug 29602 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.