2010-12-07  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        -webkit-transition Fails on Multiple text-shadow Shadows
        https://bugs.webkit.org/show_bug.cgi?id=42281

        When transitioning multiple shadows, the blend function for
        ShadowData dropped all but the first and last shadow because
        of a failure to append to the end of the list. Fixed.

        Test: transitions/multiple-text-shadow-transition.html

        * page/animation/AnimationBase.cpp:
        (WebCore::PropertyWrapperShadow::blend):

Canonical link: https://commits.webkit.org/63878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73462 268f45cc-cd09-0410-ab3c-d52691b4dbfc